--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-  "name": "12-sidebar-model",
+  "name": "food-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "animated-number-react": "^0.1.2",
+    "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.6.7",
+    "google-maps-react": "^2.0.6",
+    "node-sass": "^4.14.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^6.0.0",
+    "react-icons": "^4.3.1",
+    "react-inner-image-zoom": "^3.0.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-responsive-carousel": "^3.2.22",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "react-toastify": "^8.2.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
